added the endpoint to get images
